fixed header logo on mobile

--- a/style.css
+++ b/style.css
@@ -80,6 +80,13 @@ header {
     font-weight: normal;
 }
 
+/* Selected state styles  */
+
+/* a::selection {
+    color: red;
+} */
+
+
 
 .header-items a:hover {
     text-decoration: underline;
